--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4326,7 +4326,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border: 1px solid transparent;
 }
 
-.navbar:before,
+.-:before,
 .navbar:after {
   display: table;
   content: " ";
