--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,6 +132,15 @@ a:after {
   background-color: #1abc9c;
 }
 
+/* Google Map */
+#map-canvas {
+    max-width: 100%;
+    height: 250px;
+    width: 500px;
+    display: block;
+    margin: 0 auto;
+    clear:both;
+}
 
 /* Helpers */
 
